#9 updated  property to be  and also updated the typing to match react-pdf types e.g. single style or multiple

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@david.kucsai/react-pdf-table",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "Provides tables for the @react-pdf/renderer.",
   "main": "./lib/index.js",
   "scripts": {
@@ -14,24 +14,26 @@
   "author": "David Kucsai",
   "license": "MIT",
   "peerDependencies": {
-    "@react-pdf/renderer": "^1.6.2",
+    "@react-pdf/renderer": "^1.6.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@react-pdf/renderer": "^1.6.2",
-    "@storybook/addon-actions": "^5.2.0-beta.28",
-    "@storybook/addon-info": "^5.2.0-beta.28",
-    "@storybook/addon-knobs": "^5.2.0-beta.28",
-    "@storybook/addon-links": "^5.2.0-beta.28",
-    "@storybook/addon-options": "^5.2.0-beta.28",
-    "@storybook/addons": "^5.2.0-beta.28",
-    "@storybook/cli": "^5.2.0-beta.28",
-    "@storybook/react": "^5.2.0-beta.28",
+    "@react-pdf/renderer": "^1.6.8",
+    "@storybook/addon-actions": "^5.3.7",
+    "@storybook/addon-info": "^5.3.7",
+    "@storybook/addon-knobs": "^5.3.7",
+    "@storybook/addon-links": "^5.3.7",
+    "@storybook/addon-options": "^5.3.7",
+    "@storybook/addon-storysource": "^5.3.7",
+    "@storybook/addons": "^5.3.7",
+    "@storybook/cli": "^5.3.7",
+    "@storybook/react": "^5.3.7",
     "@types/enzyme": "^3.1.10",
     "@types/faker": "^4.1.5",
+    "@types/node": "^13.1.8",
     "@types/sinon": "^4.3.3",
-    "@types/storybook__react": "^4.0.2",
+    "@types/storybook__react": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-jest": "^22.4.4",
     "babel-loader": "^7.1.4",
@@ -53,7 +55,7 @@
     "sinon": "^7.3.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.3",
-    "typescript": "^3.5.2",
+    "typescript": "^3.7.5",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2"
