--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@david.kucsai/react-pdf-table",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "Provides tables for the @react-pdf/renderer.",
   "main": "./lib/index.js",
   "scripts": {
     "generate-barrels": "barrelsby -d src --delete -e TableRow.tsx",
-    "build": "rm -rf ./lib/* && npm run generate-barrels && tsc",
+    "build": "rm -rf ./lib/* && npm run generate-barrels && tsc && npm run build-storybook && npm run build-doco",
     "recompile": "tsc",
     "prepublish": "npm run build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o docs"
+    "build-storybook": "build-storybook -o docs",
+    "build-doco": "typedoc --out docs/typedoc --mode modules src"
   },
   "author": "David Kucsai",
   "license": "MIT",
@@ -55,6 +56,7 @@
     "sinon": "^7.3.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.3",
+    "typedoc": "^0.16.9",
     "typescript": "^3.7.5",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
