Inline ts into sourcemaps to avoid error referenceing non existant src/*.ts file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     ],
     "module": "commonjs",
     "sourceMap": true,
+    "inlineSources": true,
     "jsx": "react",
     "target": "es5",
     "outDir": "./lib",
