Update storybook to the latest version and fix migration issues. Validate that the storybook works as intended. Fixed issue with nested tables where tableBody could be null

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "removeComments": true,
     "strict": false,
     "rootDirs": ["src", "stories"],
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "skipLibCheck": true
   },
   "include": [
     "./src/**/*.tsx",
