--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepublish": "npm run build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o docs",
-    "build-doco": "typedoc --plugin typedoc-plugin-markdown --out docs/typedoc --mode modules src"
+    "build-doco": "typedoc --plugin typedoc-plugin-markdown --excludeExternals --out docs/typedoc src"
   },
   "author": "David Kucsai",
   "license": "MIT",
@@ -21,25 +21,24 @@
   },
   "devDependencies": {
     "@react-pdf/renderer": "^1.6.8",
-    "@storybook/addon-actions": "^5.3.7",
-    "@storybook/addon-info": "^5.3.7",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.7",
-    "@storybook/addon-links": "^5.3.7",
-    "@storybook/addon-options": "^5.3.7",
-    "@storybook/addon-storysource": "^5.3.7",
-    "@storybook/addons": "^5.3.7",
-    "@storybook/cli": "^5.3.7",
-    "@storybook/react": "^5.3.7",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-options": "^5.3.21",
+    "@storybook/addon-storysource": "^6.4.19",
+    "@storybook/addons": "^6.4.19",
+    "@storybook/cli": "^6.4.19",
+    "@storybook/react": "^6.4.19",
     "@types/enzyme": "^3.1.10",
     "@types/faker": "^4.1.5",
     "@types/node": "^13.1.8",
     "@types/sinon": "^4.3.3",
     "@types/storybook__react": "^5.2.1",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^22.4.4",
-    "babel-loader": "^7.1.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.0.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "barrelsby": "^2.1.1",
     "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
@@ -50,18 +49,17 @@
     "jsdom": "^15.1.1",
     "mini-css-extract-plugin": "^0.7.0",
     "react": "^16.8.6",
-    "react-docgen-typescript-loader": "^3.1.0",
+    "@storybook-addons/react-docgen-typescript-loader": "^3.8.0",
     "react-dom": "^16.8.6",
     "regenerator-runtime": "^0.13.2",
     "sinon": "^7.3.2",
+    "storybook": "^6.4.19",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.3",
-    "typedoc": "^0.16.9",
-    "typedoc-plugin-markdown": "^2.2.16",
-    "typescript": "^3.7.5",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-markdown": "^3.11.13",
+    "typescript": "^4.2.2",
+    "webpack": "^4.46.0"
   },
   "resolutions": {
     "dfa": "1.1.0"
